# stormdrain

./: .gitignore  README.md  flake.nix  pyproject.toml
app/: __init__.py  __main__.py  analyticStreetGeometry.py  basicFlow.py  capturedFlow.py  circularGeometry.py  circularLookup.py  cloggedDrain.py  debug_model.py  drainCapture.py  example.py  generateCircleTable.py  hydraulicGraph.py  hydraulicTest.py  igraphExample.py  largerExample.py  model.py  network.py  networkxExample.py  newtonBisection.py  newton_bisection.py  rain.py  sewerExample.py  ssExample.py  streetGeometry.py  streetInterp.py  subcatchmentExample.py  subcatchmentGraph.py  tempUpdateFunctions.py  testingOctave.py  visualize.py
data/: Abington.csv  Abington.csv.bak  Abington1.csv  SimpleExample  SimpleExample.csv  SimpleExampleClogged.csv  circleTableFromArea.csv  doubled_largerExample.csv  largerBasicExample.csv  largerExample.csv  largerExampleSteep.csv
octave/: A_tbl50.mat  A_tbl51.mat  R_of_Y.m  R_tbl50.mat  R_tbl51.mat  St_cross_section_graph.m  Test_functions.m  build_A_R_tables_values.m  depth_Y_from_area.m  depth_from_area.m  psi_from_area.m  psi_prime_from_area.m  tbl_values.m  test_table_values.m
tests/: test_captureFlow.py  test_circularGeometry.py  test_example.py  test_hydraulicGraph.py  test_model.py  test_newtonBisection.py  test_streetGeometry.py  test_subcatchmentGraph.py
