[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.2.0"
scipy = "^1.15.2"
matplotlib = "^3.10.0"
oct2py = "^5.8.0"
hatchling = "^1.27.0"
pyyaml = "^6.0.2"
igraph = "^0.11.9"
matplotlib-backend-kitty = "^2.1.2"
cairocffi = "^1.7.1"
networkx = "^3.5"
imageio = "^2.37.0"
pandas = "^2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
